Fixed weird spacing on forum/thread icons

--- a/public/assets/default/scss/main.scss
+++ b/public/assets/default/scss/main.scss
@@ -370,10 +370,11 @@ footer {
 
     .listing-entry-icon {
       margin-right: 5px;
+      vertical-align: top;
     }
 
     .listing-entry-name {
-      margin-bottom: 4px;
+      margin-bottom: 0px;
 
       a {
         color: #216aa4;
